--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,10 +54,41 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/GF_TDollSquad")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="GF_TDollSquadGameModeBase")
 
+;[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+;bEnablePlugin=True
+;bAllowNetworkConnection=True
+;SecurityToken=7807FA53492D24CB526B35AAEDC99E2D
+;bIncludeInShipping=False
+;bAllowExternalStartInShipping=False
+;bCompileAFSProject=False
+;bUseCompression=False
+;bLogFiles=False
+;bReportStats=False
+;ConnectionType=USBOnly
+;bUseManualIPAddress=False
+;ManualIPAddress=
+
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+; If using Sessions
+bInitServerOnClient=true
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=7807FA53492D24CB526B35AAEDC99E2D
+SecurityToken=1DC9C067441B4A456F947D8788F49F87
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
