Move Session Func from character class to TDS plugin

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/GFContent/Maps/BasicMap.BasicMap
+GameDefaultMap=/Game/GFContent/Maps/StartMenu.StartMenu
 EditorStartupMap=/Game/GFContent/Maps/BasicMap.BasicMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
