Set up TDS Gamemodebase class

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,6 +7,9 @@ ProjectID=F18E82F34736E28A84541DA52FC8C55C
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
+[/Script/Engine.GameSession]
+MaxPlayer = 100;
+
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
