Set Overhead widget

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/GFContent/Maps/StartMenu.StartMenu
 EditorStartupMap=/Game/GFContent/Maps/BasicMap.BasicMap
+TransitionMap=/Game/GFContent/Maps/TransitionMap.TransitionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
